langfuse-setup/workbench-service-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-8002
  labels:
    app: workbench
spec:
  selector:
    app: workbench
    notebook-name: workbench
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chatbot-8002
  labels:
    app: workbench
spec:
  port:
    targetPort: 8002
  to:
    kind: Service
    name: chatbot-8002
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
